Header and link target updates

--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Site</title>
-    <meta name="description" content="">
+    <meta name="description" content="John Sandoval: Full-stack JavaScript and AWS Developer">
+    <meta name="author" content="John Sandoval" />
+    <meta name="copyright" content="John Sandoval" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:title" content="John Sandoval" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.johnsandoval.us/images/home-hero.jpg" />
+    <meta property="og:url" content="https://www.johnsandoval.us" />
+    <meta property="og:description" content="Full-stack JavaScript and AWS Developer" />
+    <meta name="twitter:title" content="John Sandoval" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="https://www.johnsandoval.us/images/home-hero.jpg" />
+    <meta name="twitter:url" content="https://www.johnsandoval.us" />
+    <meta name="twitter:description" content="Full-stack JavaScript and AWS Developer" />
 
     {{content-for "head"}}
 
+    <title>John Sandoval</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/site.css">
 
