--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,11 @@
     <meta name="copyright" content="John Sandoval" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WCL3CJ7');</script>
     <meta property="og:title" content="John Sandoval" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.johnsandoval.us/images/home-hero.jpg" />
@@ -28,6 +33,10 @@
     {{content-for "head-footer"}}
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WCL3CJ7" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
